# crepe

./: Cargo.toml  README.md
benches/: collatz.rs  collection_backends.rs  fibonacci.rs  graph_walking.rs
crepe-macro/: Cargo.toml
crepe-macro/src/: lib.rs  strata.rs
crepe-support/: Cargo.toml
crepe-support/src/: lib.rs
src/: impl_alloc.rs  impl_fnv.rs  impl_hashbrown.rs  impl_heapless.rs  impl_std.rs  lib.rs
tests/: test_crepe_support_collections.rs  test_custom_collections.rs  test_no_duplicate_bounds.rs
tests/ui/: unbound_variable.stderr
