[package]
name = "crepe"
version = "0.2.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Datalog in Rust as a procedural macro"
repository = "https://github.com/ekzhang/crepe"
documentation = "https://docs.rs/crepe"
keywords = ["datalog", "analysis", "logic-programming", "compiler"]
readme = "README.md"
edition = "2018"

[workspace]
members = ["crepe-macro"]

[lib]
bench = false

[[bench]]
name = "collatz"
harness = false

[[bench]]
name = "graph_walking"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "collection_backends"
harness = false

[dev-dependencies]
trybuild = "1.0.79"
criterion = { version = "0.8.2", features = ["html_reports"] }

[dependencies]
crepe-macro = { path = "crepe-macro", version = "0.2.0" }
fnv = { version = "1.0.7", optional = true, default-features = false }
hashbrown = { version = "0.17.1", optional = true, default-features = false, features = ["alloc", "equivalent", "inline-more"] }
heapless = { version = "0.9.3", optional = true, default-features = false }

[features]
default = ["std"]
std = ["alloc", "crepe-macro/std", "fnv?/std"]
fnv = ["dep:fnv", "hashbrown", "crepe-macro/fnv"]
hashbrown = ["alloc", "dep:fnv", "dep:hashbrown", "crepe-macro/hashbrown"]
heapless = ["dep:heapless", "crepe-macro/heapless"]
alloc = ["crepe-macro/alloc"]
