[package]
name = "crepe-support"
version = "0.2.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Support traits and default collections for crepe"
repository = "https://github.com/ekzhang/crepe"
documentation = "https://docs.rs/crepe-support"
edition = "2018"

[lib]
bench = false
